--- a/Plugin-Datacontrol/toolbox.ui
+++ b/Plugin-Datacontrol/toolbox.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
-    <widget class="QTreeView" name="treeView">
+    <widget class="DataControlTreeView" name="treeView">
      <property name="minimumSize">
       <size>
        <width>0</width>
@@ -88,6 +88,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>DataControlTreeView</class>
+   <extends>QTreeView</extends>
+   <header>TreeView.hh</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
